# simple_backup

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  screenshot.avif
.github/workflows/: build.yml  test.yml
src/: backup.rs  cli.rs  compression.rs  config.rs  files.rs  gui.rs  lib.rs  lists.rs  main.rs  parse_date.rs  restore.rs  utils.rs
src/gui/: backup.rs  config.rs  merge.rs  mod.rs  paginated.rs  presets.rs  restore.rs  theme.rs  threads.rs
tests/: integration_test.rs
