[package]
name = "simple_backup"
version = "2.1.0"
authors = ["Aggrathon <antonbjo@gmail.com>"]
edition = "2021"
description = "A minimal application for doing backups."
readme = "README.md"
keywords = ["backup", "compression", "application", "software"]

[dependencies]
tar = "0.4.38"
clap = { version = "4.0.30", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
yaml-rust = "0.4.5"
chrono = "0.4.23"
regex = "1.7.0"
path-clean = "0.1.0"
path-absolutize = "3.0.14"
indicatif = { version = "0.17.2", features = ["improved_unicode"] }
zstd = { version = "0.12.1", features = ["zstdmt"] }
number_prefix = "0.4.0"
num_cpus = "1.15.0"
iced = { version = "0.6.0", features = ["smol"], optional = true }
rfd = { version = "0.10.0", optional = true }
dirs = { version = "4.0.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
resvg = "0.27.0"
usvg = { version = "0.27.0", features = ["text"] }
tiny-skia = "0.8.2"

[target.'cfg(windows)'.build-dependencies]
winresource  = "0.1.14"
ico = "0.2.0"

[features]
default = ["gui", "dirs"]
gui = ["iced", "rfd"]
