[package]
name = "simple_backup"
version = "2.2.0"
authors = ["Aggrathon <antonbjo@gmail.com>"]
edition = "2021"
description = "A minimal application for doing backups."
readme = "README.md"
keywords = ["backup", "compression", "application", "software"]

[dependencies]
tar = "0.4.43"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.39"
regex = "1.11.1"
path-clean = "1.0.1"
path-absolutize = "3.1.1"
indicatif = { version = "0.17.9", features = ["improved_unicode"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }
number_prefix = "0.4.0"
num_cpus = "1.16.0"
iced = { version = "0.13.1", features = ["smol"], optional = true }
rfd = { version = "0.15.1", optional = true }
dirs = { version = "5.0.1", optional = true }

[dev-dependencies]
tempfile = "3.14.0"

[build-dependencies]
resvg = "0.44.0"
usvg = { version = "0.44.0", features = ["text"] }
tiny-skia = "0.11.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.19"
ico = "0.3.0"

[features]
default = ["gui", "dirs"]
gui = ["iced", "rfd"]
